--- a/SEBA_FitNex/.project
+++ b/SEBA_FitNex/.project
@@ -15,5 +15,8 @@
 		<nature>org.eclipse.jdt.core.javanature</nature>
 		<nature>org.playframework.playclipse.playNature</nature>
 	</natures>
-	
+	<linkedResources><link><name>secure</name><type>2</type><location>/home/bojan/faks/seba/play-1.2.5/modules/secure/app</location></link>
+<link><name>conf/secure</name><type>2</type><location>/home/bojan/faks/seba/play-1.2.5/modules/secure/conf</location></link>
+<link><name>public/secure</name><type>2</type><location>/home/bojan/faks/seba/play-1.2.5/modules/secure/public</location></link>
+</linkedResources>
 </projectDescription>
